# autodebugger

./: .coveragerc  .gitignore  CLAUDE.md  Cargo.toml  LICENSE-APACHE  LICENSE-MIT  README.md  __init__.py  __main__.py  autodebugger_logger.py  cli.py  config.example.yaml  conftest.py  feature_taskpad_agent_dashboard.md  feature_taskpad_merge_analysis.md  pyproject.toml  testutil.py
examples/: basic_usage.rs  interactive_debugging.rs  rotating_logger.rs  verify_basic.rs
sample_project/src/: main.rs
src/: config.rs  lib.rs  log_checker.rs  main.rs  remove_debug.rs  rotating_file_logger.rs  tracing_subscriber.rs  validate_docs.rs
src/ci/: checks.rs  conflicts.rs  mod.rs
src/monitor/: diff.rs  mod.rs  worktree.rs
tests/: integration_test.rs  rotating_logger_test.rs  test_autodebugger.py  test_autodebugger_logger.py
