[package]
name = "autodebugger"
version = "0.1.0"
edition = "2021"
authors = ["Your Name <your.email@example.com>"]
description = "A code editor designed for use by LLM agents"
license = "MIT"

[[bin]]
name = "autodebugger"
path = "src/main.rs"

[dependencies]
cmd_lib = "1.9"
anyhow = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tracing = "0.1"
tracing-subscriber = "0.3"
tokio = { version = "1", features = ["full"] }
chrono = { version = "0.4", features = ["serde"] }
clap = { version = "4.0", features = ["derive"] }

[dev-dependencies]