[package]
name = "autodebugger"
version = "0.1.0"
edition = "2021"
authors = ["Brandt Weary"]
description = "A code editor designed for use by LLM agents"
license = "MIT OR Apache-2.0"

[[bin]]
name = "autodebugger"
path = "src/main.rs"

[dependencies]
cmd_lib = "1.9"
anyhow = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.9"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["registry", "fmt", "env-filter"] }
tokio = { version = "1", features = ["full"] }
chrono = { version = "0.4", features = ["serde"] }
clap = { version = "4.0", features = ["derive"] }
regex = "1.10"
walkdir = "2.4"
glob = "0.3"

[dev-dependencies]