[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "autodebugger"
version = "0.1.0"
authors = [
    { name = "Brandt Weary", email = "brandt.weary@gmail.com" },
]
description = "A debugging tool that augments test output for LLM debugging workflows"
readme = "README.md"
requires-python = ">=3.9,<3.12"
dependencies = [
    "pytest>=7.0.0",
    "click>=8.0.0",  # For CLI
]

[project.optional-dependencies]
test = [
    "pytest-cov>=4.0.0",
    "pytest-xdist>=3.0.0",  # For parallel test execution
]

[project.scripts]
autodebugger = "autodebugger.cli:main"

[tool.pytest.ini_options]
testpaths = ["tests", "autodebugger/tests"]
python_files = ["test_*.py"]
addopts = "-v --cov=autodebugger --cov-report=term-missing"

[tool.hatch.build.targets.wheel]
packages = ["autodebugger"]
